Added Vercel connection key to .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DB_STRING = mongodb+srv://derindenio:Y8ziFzov1ZKaeGMo@cluster1.6slsaed.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+
+MONGODB_URI = mongodb+srv://vercel-admin-user-661dc2cb69ddcf147121137c:tnJ9MDKROCJvV45S@cluster1.6slsaed.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
