--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "vercel": "^34.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
